[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }

[build-dependencies]
lalrpop = "0.20.2"