[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
lazy_static = "1.4.0"
rand = "0.8.5"

[build-dependencies]
lalrpop = "0.20.2"