[package]
name = "parser-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.parser]
path = ".."

[[bin]]
name = "tokenizer"
path = "fuzz_targets/tokenizer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "unit_tokenizer"
path = "fuzz_targets/unit_tokenizer.rs"
test = false
doc = false
bench = false
